--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     ">
 
         <!-- logo -->
-        <div class="flex">
+        <div class="flex items-start">
             <img src="/assets/pics/logo.445e7b59 1.png" class="w-10 h-auto" alt="">
         </div>
 
@@ -31,18 +31,44 @@
         <div class="mx-3  text-sm text-white">
 
             <!-- first line -->
-            <div class="py-3">
-                <div class="">
+            <div class="py-3 w-full">
+
+                <div class="hidden flex-row justify-between 
+                md:flex md:w-full md:items-end">
+
+                    <div class=" text-white opacity-50 text-xs">
+                        <i class="fas fa-location-dot"></i>
+                        <a href="">Yaroslavskoye Highway, property 2V, building 3 (MKAD, 95 km)</a>
+                    </div>
+
+                    <div class="text-white text-xs">
+                        <i class="fas fa-gear text-orange-400"></i>
+                        <a>Sign Up</a>
+                        <i class="fas fa-car text-orange-400 ml-8"></i>
+                        <a>Test Drive</a>
+                    </div>
+
+                </div>
+
+                <hr class="hidden md:block mt-1.5 mb-1 border-l-5 opacity-25 text-white">
+
+
+                <div class="md:flex md:flex-row">
                     <span class="font-bold">AVTORUS TANK</span>
-                    <span class="text-xs">Losiny Ostrov</span>
+                    <div class="h-6 border-l-2 border-white opacity-25  mx-5 mt-1.5 hidden md:flex"></div>
+                    <span class="hidden opacity-50 text-xs
+                    md:inline">Official dealer</span>
+                    <span class="text-xs
+                    md:hidden ">Losiny Ostrov</span>
                 </div>
 
                 <div>
-                    <span class="opacity-50 text-xs">Official dealer</span>
+                    <span class="md:hidden opacity-50 text-xs">Official dealer</span>
                 </div>
 
                 <!-- mobile icons -->
-                <div class=" flex flex-row items-center text-md  ">
+                <div class=" flex flex-row items-center text-md  
+                md:hidden">
 
                     <div class="absolute top-7 right-4.5">
 
@@ -399,18 +425,64 @@
             </div>
 
             <!-- slide pics -->
-            <div class="px-4.5 py-5 bg-green-500 w-auto">
-                <div class="flex overflow-x-auto flex-nowrap gap-5 mb-4  items-center justify-center">
-                    <img src="/assets/pics/1.png" class="inline-block" alt="">
-                    <img src="/assets/pics/12.png" class="inline-block" alt="">
-                    <img src="/assets/pics/2.png" class="inline-block" alt="">
+
+
+            <div class="px-4.5 py-5 bg-green-500 overflow-x-auto w-full">
+                <div class="flex w-max flex-nowrap gap-5 mb-4 items-center justify-center">
+                    <div class="w-[120px] h-[100px] shrink-0">
+                        <input type="checkbox" id="img1" class="hidden peer">
+                        <label for="img1">
+                            <img src="/assets/pics/car1.png" class="w-full h-full object-cover" alt="">
+                        </label>
+                        <div
+                            class="peer-checked:flex hidden fixed object-cover inset-0 bg-black bg-opacity-25 z-50 justify-center items-center">
+                            <div class="relative">
+                                <label for="img1"
+                                    class="absolute -top-10 -right-2 text-white text-2xl cursor-pointer">✕</label>
+                                <img src="/assets/pics/car1.png"
+                                    class="max-h-[80vh] max-w-[90vw] rounded-lg shadow-lg" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="w-[120px] h-[100px] shrink-0">
+                        <input type="checkbox" id="img2" class="hidden peer">
+                        <label for="img2">
+                            <img src="/assets/pics/car2.png" class="inline-block " alt="">
+                        </label>
+                        <div
+                            class="peer-checked:flex hidden fixed inset-0 bg-black bg-opacity-25 z-50 justify-center items-center">
+                            <div class="relative">
+                                <label for="img2"
+                                    class="absolute -top-10 -right-2 text-white text-2xl cursor-pointer">✕</label>
+                                <img src="/assets/pics/car2.png"
+                                    class="max-h-[80vh] max-w-[90vw] rounded-lg shadow-lg" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="w-[120px] h-[100px] shrink-0">
+                        <input type="checkbox" id="img3" class="hidden peer">
+                        <label for="img3">
+                            <img src="/assets/pics/car3.png" class=" " alt="">
+                        </label>
+                        <div
+                            class="peer-checked:flex hidden fixed inset-0 bg-black bg-opacity-25 z-50 justify-center items-center">
+                            <div class="relative">
+                                <label for="img3"
+                                    class="absolute -top-10 -right-2 text-white text-2xl cursor-pointer">✕</label>
+                                <img src="/assets/pics/car3.png"
+                                    class="max-h-[80vh] max-w-[90vw] rounded-lg shadow-lg" />
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
         </div>
     </section>
 
-    <!-- big red car 300 and dark gray background area -->
+    <!-- big gray  car 300 and dark gray background area -->
     <section class="relative bg-neutral-700 mx-0 mt-0 flex justify-center items-center">
         <div class="">
             <div class="w-full">
