--- a/index.html
+++ b/index.html
@@ -427,62 +427,18 @@
             <!-- slide pics -->
 
 
-            <div class="px-4.5 py-5 bg-green-500 overflow-x-auto w-full">
-                <div class="flex w-max flex-nowrap gap-5 mb-4 items-center justify-center">
-                    <div class="w-[120px] h-[100px] shrink-0">
-                        <input type="checkbox" id="img1" class="hidden peer">
-                        <label for="img1">
-                            <img src="/assets/pics/car1.png" class="w-full h-full object-cover" alt="">
-                        </label>
-                        <div
-                            class="peer-checked:flex hidden fixed object-cover inset-0 bg-black bg-opacity-25 z-50 justify-center items-center">
-                            <div class="relative">
-                                <label for="img1"
-                                    class="absolute -top-10 -right-2 text-white text-2xl cursor-pointer">✕</label>
-                                <img src="/assets/pics/car1.png"
-                                    class="max-h-[80vh] max-w-[90vw] rounded-lg shadow-lg" />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="w-[120px] h-[100px] shrink-0">
-                        <input type="checkbox" id="img2" class="hidden peer">
-                        <label for="img2">
-                            <img src="/assets/pics/car2.png" class="inline-block " alt="">
-                        </label>
-                        <div
-                            class="peer-checked:flex hidden fixed inset-0 bg-black bg-opacity-25 z-50 justify-center items-center">
-                            <div class="relative">
-                                <label for="img2"
-                                    class="absolute -top-10 -right-2 text-white text-2xl cursor-pointer">✕</label>
-                                <img src="/assets/pics/car2.png"
-                                    class="max-h-[80vh] max-w-[90vw] rounded-lg shadow-lg" />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="w-[120px] h-[100px] shrink-0">
-                        <input type="checkbox" id="img3" class="hidden peer">
-                        <label for="img3">
-                            <img src="/assets/pics/car3.png" class=" " alt="">
-                        </label>
-                        <div
-                            class="peer-checked:flex hidden fixed inset-0 bg-black bg-opacity-25 z-50 justify-center items-center">
-                            <div class="relative">
-                                <label for="img3"
-                                    class="absolute -top-10 -right-2 text-white text-2xl cursor-pointer">✕</label>
-                                <img src="/assets/pics/car3.png"
-                                    class="max-h-[80vh] max-w-[90vw] rounded-lg shadow-lg" />
-                            </div>
-                        </div>
-                    </div>
+            <div class="px-4.5 py-5 bg-green-500 w-auto">
+                <div class="flex overflow-x-auto flex-nowrap gap-5 mb-4  items-center justify-center">
+                    <img src="/assets/pics/image 285.png" class="inline-block" alt="">
+                    <img src="/assets/pics/image 286.png" class="inline-block" alt="">
+                    <img src="/assets/pics/image 287.png" class="inline-block" alt="">
                 </div>
 
             </div>
         </div>
     </section>
 
-    <!-- big gray  car 300 and dark gray background area -->
+    <!-- big gray car 300 and dark gray background area -->
     <section class="relative bg-neutral-700 mx-0 mt-0 flex justify-center items-center">
         <div class="">
             <div class="w-full">
