--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="bg-black ">
 
     <!-- header -->
-    <header class="flex flex-row bg-green-400 items-center
+    <header class="flex flex-row  items-center
     w-full h-auto px-4.5 py-2 
     ">
 
@@ -218,7 +218,7 @@
         </div>
 
         <!-- texts and buttons -->
-        <div class="px.4.5  right-0 left-0 mx-4.5 bg-green-600">
+        <div class="px.4.5  right-0 left-0 mx-4.5 ">
             <div class="text-white flex flex-col text-sm mt-5">
                 <span class="">We make things better</span>
                 <a href="#" class="text-3xl mt-1 mb-2 font-bold">TANK 500</a>
@@ -298,7 +298,7 @@
 
     <!-- achievments -->
     <div class="px-4 py-6">
-        <div class="bg-green-500 rounded-xl w-full shadow-xl mt-0  flex flex-col ">
+        <div class=" rounded-xl w-full shadow-xl mt-0  flex flex-col ">
             <div class="mt-0 h-15 w-full border-2 font-bold rounded-lg border-neutral-600 flex flex-row items-center gap-3
                   text-white mb-2">
                 <i class="fas fa-star ml-5"></i>
@@ -427,7 +427,7 @@
             <!-- slide pics -->
 
 
-            <div class="px-4.5 py-5 bg-green-500 w-auto">
+            <div class="px-4.5 py-5  w-auto">
                 <div class="flex overflow-x-auto flex-nowrap gap-5 mb-4  items-center justify-center">
                     <img src="/assets/pics/image 285.png" class="inline-block" alt="">
                     <img src="/assets/pics/image 286.png" class="inline-block" alt="">
@@ -528,7 +528,7 @@
             </div>
 
             <!-- slide pics -->
-            <div class="px-4.5 py-5 bg-green-500">
+            <div class="px-4.5 py-5 ">
                 <div class="flex overflow-x-auto flex-nowrap gap-5 mb-4  items-center justify-center">
                     <img src="/assets/pics/1.png" class="inline-block" alt="">
                     <img src="/assets/pics/12.png" class="inline-block" alt="">
@@ -541,7 +541,7 @@
 
     <!-- sign up section  -->
     <div class="flex flex-col items-center justify-center py-8 px-4.5">
-        <div class="bg-green-600 w-full max-w-md text-white mt-10">
+        <div class=" w-full max-w-md text-white mt-10">
             <h1 class="text-2xl font-bold text-center mb-8 ">SELECT<br>CONFIGURATION</h1>
 
             <form class="space-y-6">
@@ -697,7 +697,7 @@
 
     <!-- gift part  -->
     <section class="px-4.5 py-1">
-        <div class="bg-green-800 flex flex-col justify-center items-center">
+        <div class=" flex flex-col justify-center items-center">
             <div>
                 <img src="/assets/pics/efaab89fc21d311adf0df470ad1e3397ce3de2d5.png" class="rounded-xl 
                 object-cover w-[768px] h-[300px] sm:w-auto" alt="">
